syntax = "proto3";

package matching_engine;

option go_package = "github.com/fynnwu/FinancialTrading/go-api/matching-engine;matching_engine";

// 核心撮合引擎服务。
service MatchingEngineService {
  // 提交撮合。
  rpc SubmitOrder(SubmitOrderRequest) returns (MatchResult);

  // 获取订单簿。
  rpc GetOrderBook(GetOrderBookRequest) returns (OrderBookSnapshot);

  // 获取成交流水。
  rpc GetTrades(GetTradesRequest) returns (TradesResponse);

  // 订阅成交流。
  rpc SubscribeTrades(SubscribeTradesRequest) returns (stream TradeUpdate);
}

// 撮合请求。
message SubmitOrderRequest {
  // 订单 ID。
  string order_id = 1;
  // 交易对。
  string symbol = 2;
  // 方向。
  string side = 3;
  // 价格。
  string price = 4;
  // 数量。
  string quantity = 5;
}

// 撮合回执。
message MatchResult {
  // 订单 ID。
  string order_id = 1;
  // 成交明细序列。
  repeated Trade matched_trades = 2;
  // 剩余数量。
  string remaining_quantity = 3;
  // 最终状态。
  string status = 4;
}

// 成交详情。
message Trade {
  // 成交 ID。
  string trade_id = 1;
  // 买单 ID。
  string buy_order_id = 2;
  // 卖单 ID。
  string sell_order_id = 3;
  // 价格。
  string price = 4;
  // 数量。
  string quantity = 5;
  // 时间。
  int64 timestamp = 6;
}

// 深度请求。
message GetOrderBookRequest {
  // 交易对。
  string symbol = 1;
  // 档位。
  int32 depth = 2;
}

// 价位明细。
message OrderBookLevel {
  // 价格。
  string price = 1;
  // 总量。
  string quantity = 2;
}

// 深度快照。
message OrderBookSnapshot {
  // 交易对。
  string symbol = 1;
  // 买盘序列。
  repeated OrderBookLevel bids = 2;
  // 卖盘序列。
  repeated OrderBookLevel asks = 3;
  // 时间。
  int64 timestamp = 4;
}

// 成交查询。
message GetTradesRequest {
  // 交易对。
  string symbol = 1;
  // 限制。
  int32 limit = 2;
}

// 成交列表。
message TradesResponse {
  // 交易对。
  string symbol = 1;
  // 记录序列。
  repeated Trade trades = 2;
}

// 订阅请求。
message SubscribeTradesRequest {
  // 标的列表。
  repeated string symbols = 1;
}

// 成交推送。
message TradeUpdate {
  // 成交 ID。
  string trade_id = 1;
  // 交易对。
  string symbol = 2;
  // 价格。
  string price = 3;
  // 数量。
  string quantity = 4;
  // 时间。
  int64 timestamp = 5;
}
